@@ -1,7 +1,8 @@
- $Id: ChangeLog,v 1.131.2.25.2.121 2010/10/12 00:51:12 uehira Exp $
+ $Id: ChangeLog,v 1.131.2.25.2.122 2010/10/12 01:16:07 uehira Exp $
 
 2010-10-12  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* src/elist.c : Fixed bug. 64bit check.
+	* src/file_older.c : ANSI C
 
 2010-10-11  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* src/ecore2.c : 64bit clean?
